--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Estos materiales ya resultaban fascinantes y atractivos antes del nacimiento de 
 
     <div><a href="https://books.google.com.bo/books?id=EiCCxxgKKwYC&printsec=frontcover&dq=Star+Trek&hl=es&sa=X&ved=2ahUKEwiC3rfqobXzAhXZMbkGHUsOCu4Q6AF6BAgCEAI#v=onepage&q=Star%20Trek&f=false"><img src="2.jpg" style="width:100%"></a></div>
 
-    <div><a href="https://books.google.com.bo/books?id=x60-ygEACAAJ&dq=libros+de+cristales+en+el+tiempo&hl=es&sa=X&ved=2ahUKEwjhk4ywobXzAhW8IrkGHUnqCD8Q6AF6BAgKEAI"><img src="3.JFIF" style="width:100%"></a></div>
+    <div><a href="https://books.google.com.bo/books?id=x60-ygEACAAJ&dq=libros+de+cristales+en+el+tiempo&hl=es&sa=X&ved=2ahUKEwjhk4ywobXzAhW8IrkGHUnqCD8Q6AF6BAgKEAI"><img src="3.jpg" style="width:100%"></a></div>
     </a>
 </div>
 </div>
