--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ Estos materiales ya resultaban fascinantes y atractivos antes del nacimiento de 
         <img src="a.jpg">
         </article>
           <article class="persona__columna">
-        <img src="b.JFIF">
+        <img src="b.jpg">
         </article>
           <article class="persona__columna">
        <img src="c.jpeg">
@@ -242,10 +242,10 @@ Estos materiales ya resultaban fascinantes y atractivos antes del nacimiento de 
         <img src="d.jpg">
         </article>
           <article class="persona__columna">
-        <img src="e.JFIF">
+        <img src="e.jpg">
         </article>
           <article class="persona__columna">
-       <img src="f.JFIF">
+       <img src="f.jpg">
         </article>
            <article class="persona__columna">
         <img src="g.jpg">
@@ -257,7 +257,7 @@ Estos materiales ya resultaban fascinantes y atractivos antes del nacimiento de 
        <img src="i.gif">
         </article>
            <article class="persona__columna">
-        <img src="j.JPEG">
+        <img src="j.jpg">
         </article>
           <article class="persona__columna">
         <img src="l.jpg">
